Bytte av Kafka-topic for brukernotifikasjoner