@@ -1,6 +1,6 @@
 package no.nav.farskapsportal.backend.libs.felles.consumer.brukernotifikasjon;
 
-import static no.nav.farskapsportal.backend.libs.felles.config.BrukernotifikasjonConfig.NAMESPACE_FARSKAPSPORTAL;
+import static com.fasterxml.jackson.module.kotlin.ExtensionsKt.jacksonObjectMapper;
 import static no.nav.farskapsportal.backend.libs.felles.config.FarskapsportalFellesConfig.PROFILE_TEST;
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 import static org.junit.jupiter.api.Assertions.assertAll;
@@ -8,22 +8,15 @@ import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 
-import java.net.MalformedURLException;
+import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 import java.net.URL;
-import java.time.Instant;
-import java.time.LocalDate;
-import java.time.LocalDateTime;
-import java.time.ZoneId;
-import java.time.ZonedDateTime;
-import java.util.TimeZone;
 import java.util.UUID;
-import no.nav.brukernotifikasjon.schemas.builders.NokkelInputBuilder;
-import no.nav.brukernotifikasjon.schemas.input.BeskjedInput;
-import no.nav.brukernotifikasjon.schemas.input.NokkelInput;
 import no.nav.farskapsportal.backend.libs.entity.Forelder;
 import no.nav.farskapsportal.backend.libs.felles.FarskapsportalFellesTestConfig;
 import no.nav.farskapsportal.backend.libs.felles.config.egenskaper.FarskapsportalFellesEgenskaper;
 import no.nav.farskapsportal.backend.libs.felles.consumer.bucket.GcpStorageManager;
+import no.nav.tms.varsel.action.OpprettVarsel;
+import no.nav.tms.varsel.action.Varseltype;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentCaptor;
@@ -40,30 +33,34 @@ import org.springframework.test.context.ActiveProfiles;
 @AutoConfigureWireMock(port = 0)
 public class BeskjedprodusentTest {
 
-  private @Autowired Beskjedprodusent beskjedprodusent;
-  private @Autowired FarskapsportalFellesEgenskaper farskapsportalFellesEgenskaper;
-  private @MockBean KafkaTemplate<NokkelInput, BeskjedInput> ferdigkoe;
-  private @MockBean GcpStorageManager gcpStorageManager;
+  @Autowired private Beskjedprodusent beskjedprodusent;
+
+  @Autowired private FarskapsportalFellesEgenskaper farskapsportalFellesEgenskaper;
+
+  @MockBean private KafkaTemplate<String, String> ferdigkoe;
+
+  @MockBean private GcpStorageManager gcpStorageManager;
 
   @Test
-  void skalOppretteBeskjedTilBruker() throws MalformedURLException {
+  void skalOppretteBeskjedTilBruker() throws Exception {
 
     // given
-    var noekkelfanger = ArgumentCaptor.forClass(NokkelInput.class);
-    var beskjedfanger = ArgumentCaptor.forClass(BeskjedInput.class);
+    var noekkelfanger = ArgumentCaptor.forClass(String.class);
+    var beskjedfanger = ArgumentCaptor.forClass(String.class);
     var eksternVarsling = true;
 
     var far = Forelder.builder().foedselsnummer("11111122222").build();
     var farskapsportalUrl = new URL(farskapsportalFellesEgenskaper.getUrl());
+    var varselId = UUID.randomUUID().toString();
 
     // when
     beskjedprodusent.oppretteBeskjedTilBruker(
-        far, "Hei på deg", eksternVarsling, oppretteNokkel(far.getFoedselsnummer()));
+        far, "Hei på deg", eksternVarsling, varselId, far.getFoedselsnummer());
 
     // then
     verify(ferdigkoe, times(1))
         .send(
-            eq(farskapsportalFellesEgenskaper.getBrukernotifikasjon().getTopicBeskjed()),
+            eq(farskapsportalFellesEgenskaper.getBrukernotifikasjon().getTopicBrukernotifikasjon()),
             noekkelfanger.capture(),
             beskjedfanger.capture());
 
@@ -74,56 +71,38 @@ public class BeskjedprodusentTest {
         () -> assertThat(noekler.size()).isEqualTo(1),
         () -> assertThat(beskjeder.size()).isEqualTo(1));
 
-    var noekkel = noekler.get(0);
-    var beskjed = beskjeder.get(0);
+    var noekkel = noekler.getFirst();
+    var beskjed = beskjeder.getFirst();
+
+    // Deserialiserer JSON tilbake til OpprettVarsel
+    var objectMapper = jacksonObjectMapper();
+    objectMapper.registerModule(new JavaTimeModule());
+    var opprettetVarsel = objectMapper.readValue(beskjed, OpprettVarsel.class);
 
     assertAll(
-        () -> assertThat(noekkel.getFodselsnummer()).isEqualTo(far.getFoedselsnummer()),
+        () -> assertThat(noekkel).isEqualTo(varselId),
+        () -> assertThat(opprettetVarsel.getType()).isEqualTo(Varseltype.Beskjed),
+        () -> assertThat(opprettetVarsel.getVarselId()).isEqualTo(noekkel),
+        () -> assertThat(opprettetVarsel.getIdent()).isEqualTo(far.getFoedselsnummer()),
+        () -> assertThat(opprettetVarsel.getLink()).isEqualTo(farskapsportalUrl.toString()),
+        () -> assertThat(opprettetVarsel.getTekster().getFirst().getSpraakkode()).isEqualTo("nb"),
         () ->
-            assertThat(noekkel.getGrupperingsId())
-                .isEqualTo(
-                    farskapsportalFellesEgenskaper
-                        .getBrukernotifikasjon()
-                        .getGrupperingsidFarskap()),
+            assertThat(opprettetVarsel.getTekster().getFirst().getTekst()).isEqualTo("Hei på deg"),
+        () -> assertThat(opprettetVarsel.getEksternVarsling()).isNull(),
         () ->
-            assertThat(
-                    LocalDateTime.ofInstant(
-                        Instant.ofEpochMilli(beskjed.getTidspunkt()), ZoneId.of("UTC")))
-                .isBetween(
-                    ZonedDateTime.now(ZoneId.of("UTC")).toLocalDateTime().minusSeconds(2),
-                    ZonedDateTime.now(ZoneId.of("UTC")).toLocalDateTime()),
-        () -> assertThat(beskjed.getEksternVarsling()).isEqualTo(eksternVarsling),
-        () -> assertThat(beskjed.getLink()).isEqualTo(farskapsportalUrl.toString()),
-        () ->
-            assertThat(beskjed.getSikkerhetsnivaa())
+            assertThat(opprettetVarsel.getSensitivitet().name())
                 .isEqualTo(
                     farskapsportalFellesEgenskaper
                         .getBrukernotifikasjon()
                         .getSikkerhetsnivaaBeskjed()),
-        () -> assertThat(beskjed.getTekst()).isEqualTo("Hei på deg"),
         () ->
-            assertThat(
-                    LocalDate.ofInstant(
-                        Instant.ofEpochMilli(beskjed.getSynligFremTil()), ZoneId.of("UTC")))
-                .isEqualTo(
-                    LocalDate.ofInstant(
-                            Instant.ofEpochMilli(beskjed.getTidspunkt()),
-                            TimeZone.getDefault().toZoneId())
-                        .plusMonths(
-                            farskapsportalFellesEgenskaper
-                                .getBrukernotifikasjon()
-                                .getSynlighetBeskjedAntallMaaneder())));
-  }
-
-  private NokkelInput oppretteNokkel(String foedselsnummer) {
-    var unikEventid = UUID.randomUUID().toString();
-    return new NokkelInputBuilder()
-        .withGrupperingsId(
-            farskapsportalFellesEgenskaper.getBrukernotifikasjon().getGrupperingsidFarskap())
-        .withFodselsnummer(foedselsnummer)
-        .withEventId(unikEventid)
-        .withNamespace(NAMESPACE_FARSKAPSPORTAL)
-        .withAppnavn(farskapsportalFellesEgenskaper.getAppnavn())
-        .build();
+            assertThat(opprettetVarsel.getProdusent().getCluster())
+                .isEqualTo(farskapsportalFellesEgenskaper.getCluster()),
+        () ->
+            assertThat(opprettetVarsel.getProdusent().getNamespace())
+                .isEqualTo(farskapsportalFellesEgenskaper.getNamespace()),
+        () ->
+            assertThat(opprettetVarsel.getProdusent().getAppnavn())
+                .isEqualTo(farskapsportalFellesEgenskaper.getAppnavn()));
   }
 }
